# api-oas-convert

./: README.md
api-json/: delay-echo_0.0.1.json  delay-echo_0.0.2.json  delay-echo_0.0.3.json  delay-echo_0.0.4.json  shopping-cart_0.0.1.json  simple-echo_0.0.1.json  simple-todo-list_0.0.1.json  test-llm_0.0.1.json  test-type_0.0.1.json  todo-list_0.0.1.json  todo-list_0.0.2.json  todo-list_0.0.3.json
echo/components-rust/swagger-delay-echo/: Cargo.toml  golem.yaml
input-oas/: delay-echo_0.0.1.yaml  shopping-cart_0.0.1.yaml  shopping-cart_0.0.2.yaml  simple-echo_0.0.1.yaml  todo-list_0.0.1.yaml  todo-list_0.0.2.yaml  todo-list_0.0.4.yaml
openapi-schema/: delay-echo_0.0.1.yaml  delay-echo_0.0.2.yaml  delay-echo_0.0.3.yaml  delay-echo_0.0.4.yaml  shopping-cart_0.0.1.yaml  simple-echo_0.0.1.yaml  simple-todo-list_0.0.1.yaml  test-llm_0.0.1.yaml  todo-list_0.0.1.yaml  todo-list_0.0.2.yaml  todo-list_0.0.3.yaml
shopping-cart/: openapi.yaml  shopping-cart_0.0.1.yaml
shopping-cart/components-rust/swaggerui-shopping-cart/: Cargo.toml  golem.yaml
shopping-cart/components-rust/swaggerui-shopping-cart/src/: lib.rs
shopping-cart/components-rust/swaggerui-shopping-cart/wit/: swaggerui-shopping-cart.wit
todo-list/: todo-list1_0.0.1.yaml
todo-list/common-rust/: golem.yaml
todo-list/components-rust/swagger-todo-list/: Cargo.toml  golem.yaml
todo-list/components-rust/swagger-todo-list/src/: lib.rs
todo-list/components-rust/swagger-todo-list/wit/: swagger-todo-list.wit
wasm-files/: delay_echo.wasm  shopping_cart.wasm  simple_echo.wasm  todo_list.wasm
(+11 files in other folders)
