[package]
name = "swagger_todo_list"
version = "0.0.1"
edition = "2021"

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"swagger:todo-list-exports" = { path = "wit-generated/deps/swagger_todo-list-exports" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
chrono = "0.4.40"
once_cell = "1.21.1"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
wit-bindgen-rt = { workspace = true }
